--- a/config.json
+++ b/config.json
@@ -10,21 +10,5 @@
     "ethereum",
     "solana"
   ],
-  "rsi": {
-    "period": 14,
-    "buy": 35,
-    "sell": 70
-  },
-  "ema": {
-    "fast": 12,
-    "slow": 26,
-    "signal": 9
-  },
-  "bollinger": {
-    "period": 20,
-    "std": 2.0,
-    "squeeze_percentile": 20
-  },
-  "alert_threshold_percent": 10.0,
-  "poll_minutes": 5
+  "alert_threshold_percent": 10.0
 }
