--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,6 @@
 services:
-  - type: worker
-    name: smartcryptobot
+  - type: web
     env: python
+    plan: free
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python bot.py"
-    plan: free
